@@ -43,7 +43,7 @@ dotneovim 是一种高效的管理 Vim 配置及插件的方式。
 
     ln -s ~/.neovim ~/.config/nvim
 
-## 依赖命令行工具
+## Python, golang, Rust Language Server 配置
 
 为获得最佳使用效果，请安装以下命令工具:
 
@@ -67,9 +67,61 @@ dotneovim 是一种高效的管理 Vim 配置及插件的方式。
 
     npm install -g pyright
 
+## jtdls Java Language Server 的设置
+
+jdtls Java Language Server有多种安装方式，具体可以参考[nvim-jdtls官方文档][7]。
+
+以下为MacOS X上推荐安装方法。
+安装 OpenJDK 11+。建议使用 SDKMan 安装。示例：
+
+    sdk install java 11.0.2.hs-adpt
+
+安装 Gradle。建议使用 SDKMan 安装。示例：
+
+    sdk install gradle
+
+安装 jdtls Java Language Server
+从 [Eclipse 官网下载][8] jdtls, 以 1.2.0 为例：
+
+    wget https://download.eclipse.org/jdtls/milestones/1.2.0/jdt-language-server-1.2.0-202106301459.tar.gz
+    mkdir -p ~/apps/jdtls
+    tar -xzvf jdt-language-server-1.2.0-202106301459.tar.gz -C ~/apps/jdtls
+
+创建名为 java-lsp.sh 的可执行脚本，包含以下内容：
+
+    #!/bin/sh
+
+    # NOTE:
+    # This doesn't work as is on Windows. You'll need to create an equivalent `.bat` file instead
+    #
+    # NOTE:
+    # If you're not using Linux you'll need to adjust the `-configuration` option
+    # to point to the `config_mac' or `config_win` folders depending on your system.
+
+    JAR="$HOME/apps/jdtls/plugins/org.eclipse.equinox.launcher_*.jar"
+    GRADLE_HOME=$HOME/.sdkman/candidates/groovy/current $HOME/.sdkman/candidates/java/11.0.2-open/bin/java \
+      -Declipse.application=org.eclipse.jdt.ls.core.id1 \
+      -Dosgi.bundles.defaultStartLevel=4 \
+      -Declipse.product=org.eclipse.jdt.ls.core.product \
+      -Dlog.protocol=true \
+      -Dlog.level=ALL \
+      -Xms1g \
+      -Xmx2G \
+      -jar $(echo "$JAR") \
+      -configuration "$HOME/apps/jdtls/config_mac" \
+      -data "${1:-$HOME/workspace}" \
+      --add-modules=ALL-SYSTEM \
+      --add-opens java.base/java.util=ALL-UNNAMED \
+      --add-opens java.base/java.lang=ALL-UNNAMED
+
+如果是Linux系统，请把-configuration 改为__"$HOME/apps/jdtls/config_mac"__
+
+
 [1]: https://github.com/junegunn/vim-plug
 [2]: https://github.com/BurntSushi/ripgrep
 [3]: https://github.com/cli/cli
 [4]: https://github.com/golang/tools/blob/master/gopls/README.md
 [5]: https://github.com/BurntSushi/ripgre://github.com/microsoft/pyright
 [6]: https://github.com/rust-analyzer/rust-analyzer
+[7]: https://github.com/mfussenegger/nvim-jdtls#language-server-installation
+[8]: https://download.eclipse.org/jdtls/milestones/
